--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,12 @@
   <span>Welcome To Project</span>
 </div>
 
-<div class="content" role="main">
+<div class="content" role="main" id="page">
 
   <app-text></app-text>
   <app-image></app-image>
   <app-chart></app-chart>
 
+  <button (click)="exportHtmlToPDF()">Convert PDF</button>
+
 </div>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
